--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -1,4 +1,4 @@
-<header class=" header clearfix" id="clearfix">
+<header class=" header clearfix" >
   <div class="header-sentence">
     <div class="header__logo">
       <img src="assets/ball.jpg">
@@ -73,11 +73,11 @@
 
   </article>
 
-  <section class="introduce">
-    <div class="introduce__title">
+  <section class="introduction">
+    <div class="introduction__title">
       紹介
     </div>
-    <div class="introduce__comment">
+    <div class="introduction__comment">
       <p>コメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメント</p>
     </div>
   </section>
