--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -1,36 +1,5 @@
-<header class=" header clearfix" >
-  <div class="header-sentence">
-    <div class="header__logo">
-      <img src="assets/ball.jpg">
-    </div>
-    <div class="header__title">
-      Inpulse
-    </div>
-  </div>
-    <div class="humberger-menu-buttom">
-      <img src="assets/menu-aicon.png">
-    </div>
-  <nav>
-    <ul class="header__list">
-      <li><a href="#" class="square_btn">HOME</a></li>
-      <li><a href="#" class="square_btn">NEWS</a></li>
-      <li><a href="#" class="square_btn">GAME</a></li>
-      <li><a href="#" class="square_btn">MEMBER</a></li>
-    </ul>
-  </nav>
 
-  <nav class="global-navigation">
-    <ul class="global-navigation-list">
-      <div class="global-navigation-close-buttom">
-        <img src="assets/menu-close.png">
-      </div>
-      <li><a href="#" class="square_btn">HOME</a></li>
-      <li><a href="#" class="square_btn">NEWS</a></li>
-      <li><a href="#" class="square_btn">GAME</a></li>
-      <li><a href="#" class="square_btn">MEMBER</a></li>
-    </ul>
-  </nav>
-</header>
+<%= render partial:'header' %>
 
   <section class="contents">
     <div class="title-wrapper">
