--- a/app/views/inpulse/_header.html.erb
+++ b/app/views/inpulse/_header.html.erb
@@ -1,4 +1,4 @@
-<header class=" header" >
+<header class=" header clearfix" >
   <div class="header-wrapper clearfix">
     <div class="header__logo">
       <img src="assets/ball.jpg">
