--- a/app/assets/stylesheets/inpulse.scss
+++ b/app/assets/stylesheets/inpulse.scss
@@ -57,11 +57,11 @@ body{
   width: 100%;
   height: 100px;
   &-wrapper{
-    margin: 10px;
+    margin: 5px;
+    float: left;
   }
   &__logo{
     float: left;
-    // margin: 10px;
     img{
       width: 70px;
       height: 70px;
