--- a/app/assets/stylesheets/inpulse.scss
+++ b/app/assets/stylesheets/inpulse.scss
@@ -56,8 +56,9 @@ body{
 .header{
   width: 100%;
   height: 100px;
+  position: relative;
   &-wrapper{
-    margin: 5px;
+    margin: 13px;
     float: left;
   }
   &__logo{
@@ -74,16 +75,24 @@ body{
     font-family: impact;
     padding: 10px;
   }
+  .header-navigation{
+    height: 100px;
+  }
   &__list{
-    float:right;
     list-style: none;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform:translateY(-50%);
   }
   li{
     float: left;
-    margin: 30px 0 0 0;
     padding-right: 30px;
     font-size: 20px;
     color: orange;
+  }
+  li:last-child{
+    padding-right: 0;
   }
   li a{
     color: inherit;
@@ -113,8 +122,10 @@ body{
   @media screen and ( max-width:767px ){
     .header{
       height: 60px;
+      &-wrapper{
+        margin: 5px;
+      }
     }
-
     .header__logo img{
       width: 50px;
       height: 50px;
@@ -131,9 +142,10 @@ body{
     }
     .humberger-menu-buttom {
       display: block;
-      position: absolute;
-      top: 20px;
-      right: 10px;
+      position:absolute;
+      top: 50%;
+      right: 13px;
+      transform:translateY(-50%);
       img{
         width: 30px;
         height: 30px;
