--- a/app/views/inpulse/_header.html.erb
+++ b/app/views/inpulse/_header.html.erb
@@ -10,7 +10,7 @@
     <div class="humberger-menu-buttom">
       <img src="assets/menu-aicon.png">
     </div>
-  <nav class="header-navigation">
+  <nav class="header-navigation clearfix">
     <ul class="header__list">
       <li><a href="#" class="square_btn">HOME</a></li>
       <li><a href="#" class="square_btn">NEWS</a></li>
